src/tests/functionality/assignment_5_functions_headers/valid/01_mandatory_function_definition_and_call.c
int add(int x, int y) {
    return x + y;
}

int main() {
    int result = add(2, 3);
    return result;
}
