src/tests/functionality/assignment_5_functions_headers/invalid_semantic/09_mandatory_call_wrong_argument_count_too_many.c
int inc(int x) {
    return x + 1;
}

int main() {
    return inc(1, 2);
}
